--- a/alpine/stable/Dockerfile
+++ b/alpine/stable/Dockerfile
@@ -1,6 +1,6 @@
 FROM lezhicent/alpine:3.8
 
-LABEL maintainer="xutongle@gmail.com"
+LABEL maintainer="lezhi2018@gmail.com"
 
 # persistent / runtime deps
 ENV BUILD_DEPS autoconf dpkg-dev file g++ gcc libc-dev make linux-headers curl pcre-dev zlib-dev libressl-dev libxml2-dev libxslt-dev gd-dev
