--- a/xenial/mainline/image-files/usr/local/etc/nginx/nginx.conf
+++ b/xenial/mainline/image-files/usr/local/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user  www-data;
+user  www-data www-data;
 worker_processes  auto;
 
 daemon off;
@@ -57,19 +57,34 @@ http {
 	fastcgi_buffers 4 64k;
 	fastcgi_busy_buffers_size 128k;
 
+	proxy_headers_hash_max_size 51200;
+	proxy_headers_hash_bucket_size 6400;
 	proxy_temp_path  /var/lib/nginx/proxy_temp;
 	proxy_cache_path /var/lib/nginx/proxy levels=1:2 keys_zone=one:100m inactive=1d  max_size=1g;
 	proxy_cache_key $host$request_uri;
 
 	##
-	# # NginxHttpRealIpModule Settings
+	# Server Load Balancer IP addresses Settings
 	##
-	include realip.conf;
+	set_real_ip_from 100.64.0.0/10;
+	set_real_ip_from 10.0.0.0/8;
+	set_real_ip_from 172.16.0.0/12;
+	set_real_ip_from 192.168.0.0/16;
+	real_ip_header X-Forwarded-For;
+	real_ip_recursive on;
 
 	##
 	# Gzip Settings
 	##
-	include gzip.conf;
+	gzip on;
+	gzip_min_length  1k;
+	gzip_buffers     4 16k;
+	gzip_http_version 1.1;
+	gzip_comp_level 2;
+	gzip_types     text/plain application/javascript application/x-javascript text/javascript text/css application/xml application/xml+rss;
+	gzip_vary on;
+	gzip_proxied        expired no-cache no-store private auth;
+	gzip_disable        "MSIE [1-6]\.";
 
 	#limit_conn_zone $binary_remote_addr zone=perip:10m;
 	##If enable limit_conn_zone,add "limit_conn perip 10;" to server section.
@@ -77,9 +92,9 @@ http {
 	##
 	# Logging Settings
 	##
-	log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+	log_format  main  '$remote_addr - $remote_user [$time_local] "$request" $http_host '
+                      '$status $request_length $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" $request_time $upstream_response_time "$http_x_forwarded_for"';
 
 	log_format logstash_json '{ "@timestamp": "$time_iso8601", '
                              '"@fields": { '
@@ -94,22 +109,6 @@ http {
                              '"http_referrer": "$http_referer", '
                              '"http_user_agent": "$http_user_agent" } }';
 	#access_log  logs/access.log  main;
-
-	server {
-		listen       80 default_server;
-		server_name  localhost;
-		index  index.html index.htm;
-		root  /usr/local/html;
-		access_log off;
-
-		location /nginx-status {
-			stub_status on;
-			access_log off;
-			#allow 192.168.1.0/24;
-			#allow 127.0.0.1;
-			#deny all;
-		}
-	}
 
 	include sites/*.conf;
 }
